--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <!-- Favicon -->
-        <link rel="icon" href="assets/img/muhammad.jpg"  type="image/jpg">
+        <link rel="icon" href="assets/img/profile_img.jpg"  type="image/jpg">
 
-        <title>Preet Ojha</title>
+        <title>Preet Ojha's Resume</title>
     </head>
     <body>
         <!-- HEADER -->
@@ -172,11 +172,12 @@
                                     <h3 class="education_title">Secondary Schooling</h3>
                                     <span class="education_studies">Kendriya Vidyalaya No.1 Shahibaug Ahmedabad (CBSE)</span>
                                     <span class="education_year">Percentage: 65.70%</span>
-                                    <span class="education_year">Year of completion: 2015</span>
+                                    <span class="education_year">Year of completion: 2015<br></br> <br></br> <br></br></span>
                                 </div>
                             </div>
                         </div>
                     </section>
+                
                     <!-- SKILLS  -->
                     <section class="skills section" id="skills">
                         <h2 class="section-title">Skills</h2>
@@ -328,7 +329,7 @@
                                 <h3 class="references_title">CCA Java Level 1</h3>
                                 <ul class="references_contact">
                                     <li>06/2020 - 06/2020</li>
-                                    <li>Cambridge Certification Authority Professional Certification, Online</li>
+                                    <li>Cambridge Certification Authority Professional Certification, Online <br></br> <br></br> <br></br> </li>
                                 </ul>
                             </div>
                             <div class="references_content bd-grid">
@@ -336,7 +337,7 @@
                                 <h3 class="references_title">Programming Foundations With JavaScript, HTML And CSS</h3>
                                 <ul class="references_contact">
                                     <li>09/2020 - 10/2020</li>
-                                    <li>Duke University on Coursera, Online</li>
+                                    <li>Duke University on Coursera, Online <br></br> <br></br> <br></br> </li>
                                 </ul>
                             </div>
                         </div>
