--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                     <h3 class="education_title">Secondary Schooling</h3>
                                     <span class="education_studies">Kendriya Vidyalaya No.1 Shahibaug Ahmedabad (CBSE)</span>
                                     <span class="education_year">Percentage: 65.70%</span>
-                                    <span class="education_year">Year of completion: 2015<br></br> <br></br> <br></br></span>
+                                    <span class="education_year">Year of completion: 2015</span>
                                 </div>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
                 
                     <!-- SKILLS  -->
                     <section class="skills section" id="skills">
-                        <h2 class="section-title">Skills</h2>
+                        <h2 class="section-title"> <br></br> <br></br> <br></br> Skills</h2>
                         <div class="skills_content bd-grid">
                             <ul class="skills_data">
                                 
@@ -329,7 +329,7 @@
                                 <h3 class="references_title">CCA Java Level 1</h3>
                                 <ul class="references_contact">
                                     <li>06/2020 - 06/2020</li>
-                                    <li>Cambridge Certification Authority Professional Certification, Online <br></br> <br></br> <br></br> </li>
+                                    <li>Cambridge Certification Authority Professional Certification, Online</li>
                                 </ul>
                             </div>
                             <div class="references_content bd-grid">
@@ -337,14 +337,14 @@
                                 <h3 class="references_title">Programming Foundations With JavaScript, HTML And CSS</h3>
                                 <ul class="references_contact">
                                     <li>09/2020 - 10/2020</li>
-                                    <li>Duke University on Coursera, Online <br></br> <br></br> <br></br> </li>
+                                    <li>Duke University on Coursera, Online </li>
                                 </ul>
                             </div>
                         </div>
                     </section>
                     <!-- LANGUAGES -->
                     <section class="languages section">
-                        <h2 class="section-title">Languages</h2>
+                        <h2 class="section-title"> <br></br> <br></br> <br></br> Languages</h2>
                         <div class="languages_container">
                             <ul class="languages_content bd-grid">
                                 <li class="languages_name">
