--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <i class="bx bxl-instagram social_icon"></i> preet_ojha
                             </a>
 
-                            <a href="https://www.instagram.com/preet_ojha_" target="_blank" class="social_link">
+                            <a href="https://play.google.com/store/apps/developer?id=Creatures" target="_blank" class="social_link">
                                 <i class="bx bxl-play-store social_icon"></i> Craetures
                             </a>
 
@@ -180,7 +180,7 @@
                 
                     <!-- SKILLS  -->
                     <section class="skills section" id="skills">
-                        <h2 class="section-title"> <br></br> <br></br> <br></br> Skills</h2>
+                        <h2 class="section-title"> <br></br>Skills</h2>
                         <div class="skills_content bd-grid">
                             <ul class="skills_data">
                                 
@@ -344,7 +344,7 @@
                     </section>
                     <!-- LANGUAGES -->
                     <section class="languages section">
-                        <h2 class="section-title"> <br></br> <br></br> <br></br> Languages</h2>
+                        <h2 class="section-title"><br></br>Languages</h2>
                         <div class="languages_container">
                             <ul class="languages_content bd-grid">
                                 <li class="languages_name">
