--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 
                     <!-- SKILLS  -->
                     <section class="skills section" id="skills">
-                        <h2 class="section-title"> <br></br>Skills</h2>
+                        <h2 class="section-title">Skills</h2>
                         <div class="skills_content bd-grid">
                             <ul class="skills_data">
                                 
@@ -344,7 +344,7 @@
                     </section>
                     <!-- LANGUAGES -->
                     <section class="languages section">
-                        <h2 class="section-title"><br></br>Languages</h2>
+                        <h2 class="section-title">Languages</h2>
                         <div class="languages_container">
                             <ul class="languages_content bd-grid">
                                 <li class="languages_name">
