--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                         </li>
                         <li class="nav_item">
                             <a href="#certificate" class="nav_link">
-                                <i class='bx bx-award nav_icon'></i>Certificate
+                                <i class='bx bx-file nav_icon'></i>Major Projects
                             </a>
                         </li>
                         <li class="nav_item">
                             <a href="#references" class="nav_link">
-                                <i class='bx bx-link-external nav_icon'></i>References
+                                <i class='bx bx-award nav_icon'></i>Certificate
                             </a>
                         </li>
                     </ul>
@@ -399,5 +399,6 @@
         
         <!-- MAIN JS -->
         <script src="assets/js/main.js"></script>
+        <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     </body> <br>
 </html>
