--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                             <div class="certificate_content">
                                 <h3 class="certificate_title">NGO Management System - (07/2019 To 01/2020) </h3>
                                 <p class="certificate_description">
-                                    The Catering Application Is An Online Platform For Users To View And Order Food And Other Services All Over India.  It Provides A Categorization Of Foods And Thalis To User To Find Appropriate Foods For The Proper Occasion They Need In That.
+                                    The NGO Application Is An Online Platform For Users To View And Find Help For Any Kind Services All Over India. It Provides A Categorization Of Help To User To Find Appropriate Help For The Proper Need.
                                 </p>
                             </div>
 
