--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
                             </ul>
                             
-                            <ul class="skills_data">
+                            <ul class="skills_data_2">
 
                                 <li class="skills_name">
                                     <span class="skills_circle"></span> Android
