New thing Updated

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                             </div>
                             <div class="home_address bd-grid">
                                 <span class="home_information">
-                                    <i class="bx bx-map"> &nbsp; </i> Gujarat, India 
+                                    <i class="bx bx-map"> &nbsp; </i> Toronto, Ontario 
                                 </span>
                                 <span class="home_information">
                                     <i class="bx bx-envelope"> &nbsp; </i> developer.preetojha08@gmail.com
                                 </span>
                                 <span class="home_information">
-                                    <i class="bx bx-phone"> &nbsp; </i> +91 9974675848
+                                    <i class="bx bx-phone"> &nbsp; </i> +1 (437)-808-2062
                                 </span>
                             </div>
                         </div>
@@ -209,6 +209,9 @@
 
                                 <li class="skills_name">
                                     <span class="skills_circle"></span> Android
+                                </li>
+                                <li class="skills_name">
+                                    <span class="skills_circle"></span> Kotlin
                                 </li>
                                 <li class="skills_name">
                                     <span class="skills_circle"></span> JAVA
