--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <!-- Favicon -->
-        <link rel="icon" href="assets/img/profile_img.jpg"  type="image/jpg">
+        <link rel="icon" href="assets/img/it'sme.png"  type="image/jpg">
 
         <title>Preet Ojha's Resume</title>
     </head>
@@ -73,7 +73,7 @@
                     <section class="home" id="home">
                         <div class="home_containter section bd-grid">
                             <div class="home_data bd-grid">
-                                <img src="assets/img/profile_img.jpg" alt="" class="home_img center">
+                                <img src="assets/img/it'sme.png" alt="" class="home_img center">
                                 <h1 class="home_title">Preet <b>Ojha</b></h1>
                                 <h3 class="home_profession">Android Developer</h3>
                                 <!-- Button to generate and download the pdf. Available for desktop. -->
