--- a/index.html
+++ b/index.html
@@ -217,13 +217,13 @@
                                     <span class="skills_circle"></span> JAVA
                                 </li>
                                 <li class="skills_name">
-                                    <span class="skills_circle"></span> UI/UX
+                                    <span class="skills_circle"></span> Compose
+                                </li>
+                                <li class="skills_name">
+                                    <span class="skills_circle"></span>UI/UX
                                 </li>
                                 <li class="skills_name">
                                     <span class="skills_circle"></span>GITHUB
-                                </li>
-                                <li class="skills_name">
-                                    <span class="skills_circle"></span>Project Management
                                 </li>
                             </ul>
 
